test/conformance/kuttl/generate/clusterpolicy/standard/existing/existing-basic-create-data/04-checks.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
assert:
- generated-resources.yaml
error:
- fail-generated-resources.yaml
