test/conformance/kuttl/generate/clusterpolicy/standard/existing/existing-basic-create-data/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: existing-basic-create-data-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
